fix: update list of reserved keywords for MariaDB
MariaDB 12.2.2 does not accept these words unquoted in e.g. a table name.
Some words are listed as reserved but do work as table names: GENERAL, IGNORE_SERVER_IDS, MASTER_HEARTBEAT_PERIOD, MASTER_SSL_VERIFY_SERVER_CERT, SLOW
But because they are listed in the documentation, they should still be quoted.